[package]
name = "asm816"
version = "0.1.0"
edition = "2021"
authors = ["Emily Backes <lashtear@gmail.com>"]
license = "BSD-3-Clause OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = {version = "0.3.0", features = ["auto-color"]}
bytes = "1.4.0"
chumsky = "0.9.2"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"

[profile.release]
opt-level = 3
lto = true
debug = true
split-debuginfo = "packed"

[profile.dev]
opt-level = "s"
lto = false
split-debuginfo = "packed"
